# corpchat

./: .env.example  .gitignore  ADK_API_DISCOVERY_LOG.md  ADK_CORRECTION_SUMMARY.md  ADK_SIMPLIFIED_APPROACH.md  AUDIT_SUMMARY_20251014.md  DEPLOYMENT_STATUS.md  ESTADO_ACTUAL.md  FASE3_SUMMARY.md  GCP_SETUP_COMPLETE.md  IMPLEMENTATION_STATUS_2025-10-15.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS_MANUAL.md  ORCHESTRATOR_ADK_SUCCESS_FINAL.md  ORCHESTRATOR_DEPLOYMENT_SUCCESS.md  PROGRESS.md  README.md  SESION_15_OCT_2025_RESUMEN.md  SHARED_PROJECT_SAFETY.md  VECTOR_STORE_SETUP_COMPLETE.md  audit_bigquery_20251014_200055.txt  audit_report_20251014_193747.txt  docker-compose.yml  env.local.template  env.template  plataforma_conversacional_fin_ops_serverless_adk_open_web_ui.md  requirements-local.txt  test_data.csv  test_document.txt  test_document_spanish.txt
cognitive-core/: CREDENTIALS.md  README.md  pyproject.toml  requirements.txt
cognitive-core/agent-ui/: Dockerfile  README.md  app.py  docker-compose.yml
cognitive-core/base-agent/: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
cognitive-core/base-agent/config/: agent_config.yaml
cognitive-core/base-agent/src/: __init__.py  agent_config.py  agent_service.py  config_loader.py  interfaces.py  tool_factory.py  tools.py
cognitive-core/config/: __init__.py  core.yaml
cognitive-core/docker/: Dockerfile  Dockerfile.dev  __init__.py  docker-compose.yml
cognitive-core/docs/: __init__.py
cognitive-core/src/: __init__.py  main.py
cognitive-core/tests/: __init__.py
(+227 files in other folders)
